added auth routes to home page

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -18,7 +18,7 @@
         <p-button
           label="Start Your Application"
           icon="pi pi-arrow-right"
-          routerLink="/"
+          routerLink="/auth"
           styleClass="p-button-raised"
           [style]="{ backgroundColor: 'black', borderColor: 'black', color: 'white', minWidth: '200px' }"
           iconPos="right"
