--- a/src/app/components/auth/auth.html
+++ b/src/app/components/auth/auth.html
@@ -36,14 +36,14 @@
       <form [formGroup]="signInForm" (ngSubmit)="onSignIn()" class="space-y-3">
         <!-- Email Field -->
         <div>
-          <label class="text-sm font-medium mb-1 block">Email</label>
+          <label class="text-sm font-medium mb-1 block text-black">Email</label>
           <input
             pInputText
             type="text"
             placeholder="Enter your email"
             formControlName="email"
             autocomplete="off"
-            class="w-full px-4 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-black"
+            class="w-full px-4 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-black text-black"
           />
 
           <!-- Validation  -->
@@ -56,13 +56,13 @@
         <!-- Password Field -->
 
         <div>
-          <label class="text-sm font-medium mb-1 block">Password</label>
+          <label class="text-sm font-medium mb-1 block text-black">Password</label>
           <input
             pInputText
             type="password"
             placeholder="Enter your password"
             formControlName="password"
-            class="w-full px-4 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-black"
+            class="w-full px-4 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-black text-black"
           />
           <!-- Validation Message for Password -->
           <div *ngIf="signInForm.controls['password'].touched && signInForm.controls['password'].invalid" class="text-red-500 text-sm">
@@ -74,7 +74,7 @@
           class="w-full bg-[#0B1120] text-white rounded-md py-2 px-4 focus:outline-none focus:ring-2 focus:ring-blue-400"
           [disabled]="signInForm.invalid"
         >
-          Sign Up
+          Sign In
         </button>
 
       </form>
@@ -88,24 +88,24 @@
       <form [formGroup]="signUpForm" (ngSubmit)="onSignUp()" class="space-y-4">
         <!-- Name Field -->
         <div>
-          <label class="text-sm font-medium mb-1 block">Full Name</label>
+          <label class="text-sm font-medium mb-1 block text-black">Full Name</label>
           <input
             pInputText
             type="email"
             placeholder="Enter your full name"
             formControlName="fullName"
-            class="w-full px-4 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-black"
+            class="w-full px-4 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-black text-black"
           />
         </div>
         <!-- Email Field -->
         <div>
-          <label class="text-sm font-medium mb-1 block">Email</label>
+          <label class="text-sm font-medium mb-1 block text-black">Email</label>
           <input
             pInputText
             type="email"
             placeholder="Enter your email"
             formControlName="email"
-            class="w-full px-4 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-black"
+            class="w-full px-4 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-black text-black"
           />
 
           <div *ngIf="signUpForm.controls['email'].touched && signUpForm.controls['email'].invalid" class="text-red-500 text-sm">
@@ -116,13 +116,13 @@
 
         <!-- Password Field -->
         <div>
-          <label class="text-sm font-medium mb-1 block">Password</label>
+          <label class="text-sm font-medium mb-1 block text-black">Password</label>
           <input
             pInputText
             type="password"
             placeholder="Enter your password"
             formControlName="password"
-            class="w-full px-4 py-2  border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-black"
+            class="w-full px-4 py-2  border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-black text-black"
           />
 
           <!-- Validation Message for Password -->
