AdminDashbored + Manaegment (Users -> Managers)

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -95,6 +95,7 @@
         <p-button
           label="Create Your Account"
           styleClass="w-full p-button-raised"
+          routerLink="/auth"
           [style]="{ backgroundColor: 'black', borderColor: 'black', color: 'white' }"
         ></p-button>
       </ng-template>
