--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -13,8 +13,10 @@
   <!-- Buttons on the right -->
   <ng-template pTemplate="end">
     <div class="flex gap-2">
-        <button pButton label="Sign In" class="p-button-text custom-signin"></button>
-        <button pButton label="Get Started" class="custom-getstarted"></button>
+        <button pButton label="Sign In" class="p-button-text custom-signin" routerLink="/auth"
+        ></button>
+        <button pButton label="Get Started" class="custom-getstarted" routerLink="/auth"
+        ></button>
 
     </div>
   </ng-template>
