--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -18,6 +18,13 @@
         <button pButton label="Get Started" class="custom-getstarted" routerLink="/auth"
         ></button>
 
+      <button
+        pButton
+        label="Admin"
+        class="p-button-outlined p-button-sm text-sm"
+        [routerLink]="['/adminDashboard']">
+      </button>
+
     </div>
   </ng-template>
 </p-menubar>
