--- a/src/app/components/admin-mangment/admin-dashboard/users/teachers/teachers-list/teachers-list.html
+++ b/src/app/components/admin-mangment/admin-dashboard/users/teachers/teachers-list/teachers-list.html
@@ -2,7 +2,7 @@
   <h2 class="text-2xl font-semibold text-gray-800 mb-4">teacher List</h2>
 
   <p-table
-    [value]="teachers"
+    [value]="students"
     [paginator]="true"
     [rows]="5"
     [responsiveLayout]="'scroll'"
