--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar *ngIf="showNavbar"></app-navbar>
 
 <div class="p-4 main-content">
   <router-outlet></router-outlet>
