--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -25,7 +25,7 @@
         pButton
         label="Admin"
         class="p-button-outlined p-button-sm text-sm"
-        [routerLink]="['/admin/users/StudentList']">
+        [routerLink]="['admin/dashboard']">
       </button>
 
     </div>
