--- a/src/app/layouts/admin-layout/admin-layout.html
+++ b/src/app/layouts/admin-layout/admin-layout.html
@@ -1,5 +1,7 @@
 
-<app-admin-horizontal-menu></app-admin-horizontal-menu>
-<div class="admin-content">
-  <router-outlet></router-outlet>
+<div class="row">
+  <div class="col-3">
+    <app-admin-horizontal-menu></app-admin-horizontal-menu>
+  </div>
+  <div class="col-9"><router-outlet></router-outlet></div>
 </div>
