Removiong old auth component, creating the new signin component

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -16,7 +16,7 @@
       <button class="lang-icon-btn" (click)="toggleLang()" title="Change Language">
         🌐 {{ currentLang === 'ar' ? 'AR' : 'EN' }}
       </button>
-        <button pButton label="Sign In" class="p-button-text custom-signin" routerLink="/auth"
+        <button pButton label="Sign In" class="p-button-text custom-signin" routerLink="/auth/signin"
         ></button>
         <button pButton label="Get Started" class="custom-getstarted" routerLink="/auth"
         ></button>
