center signup button

--- a/src/app/components/auth/sign-up/sign-up.html
+++ b/src/app/components/auth/sign-up/sign-up.html
@@ -90,8 +90,8 @@
         </div>
 
         <!-- Submit -->
-        <div class="pt-3">
-          <p-button type="submit" [label]="'SIGN_UP' | translate" styleClass="w-full" [disabled]="signUpForm.invalid"></p-button>
+        <div class="pt-3 flex justify-center">
+          <p-button class="w-full" [label]="'SIGN_UP' | translate" styleClass="w-full" [disabled]="signUpForm.invalid"></p-button>
         </div>
       </form>
     </div>
