--- a/src/app/layouts/admin-layout/admin-layout.html
+++ b/src/app/layouts/admin-layout/admin-layout.html
@@ -1,7 +1,10 @@
-
 <div class="row">
   <div class="col-3">
     <app-admin-horizontal-menu></app-admin-horizontal-menu>
   </div>
-  <div class="col-9"><router-outlet></router-outlet></div>
+  <div class="col-9">
+    <app-app-nav-bar></app-app-nav-bar>
+    <router-outlet></router-outlet>
+  </div>
 </div>
+
