--- a/src/app/layouts/admin-layout/admin-layout.html
+++ b/src/app/layouts/admin-layout/admin-layout.html
@@ -4,6 +4,7 @@
   </div>
   <div class="col-9">
     <app-app-nav-bar></app-app-nav-bar>
+    <app-appbreadcrumb></app-appbreadcrumb>
     <router-outlet></router-outlet>
   </div>
 </div>
