Student Enrollment Requests + Student Enrollment details

--- a/src/app/shared/user-profile/user-profile.html
+++ b/src/app/shared/user-profile/user-profile.html
@@ -31,18 +31,15 @@
   <div class="profile-fields">
     <div class="field-row">
       <label>Phone:</label>
-      <span>{{ user.phone }}</span>
-    </div>
-    <div class="field-row">
-      <label>Birthdate:</label>
-      <span>{{ user.birthdate | date: 'longDate' }}</span>
+      <span>{{ user.phoneNumber }}</span>
     </div>
     <div class="field-row">
       <label>Job Title:</label>
-      <span>{{ user.job }}</span>
+      <span>{{ user.role }}</span>
     </div>
   </div>
 </p-card>
+
 
 
 
