Connect enrollement pages with API

--- a/src/app/student-encrollment/student-enrollment-requests/student-enrollment-requests.html
+++ b/src/app/student-encrollment/student-enrollment-requests/student-enrollment-requests.html
@@ -1,7 +1,7 @@
 <h2 class="mt-2 text-xl font-bold mb-4">{{ 'STUDENT_ENROLLMENT_REQUESTS' | translate }}</h2>
 
 <p-table
-  [value]="Students"
+  [value]="applicants"
   [paginator]="true"
   [rows]="5"
   [tableStyle]="{ 'min-width': '70rem' }"
